Core Level Movement Implemented -Usually more descriptive with these but uh, there's a lot to explain -Added logic for infinite terrain strip gen with coroutine -Added a camera movement script -Cleaned some code up

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,9 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+.idea/.idea.Jumpy-Street-Project/riderModule.iml
+.idea/.idea.Jumpy-Street-Project/.idea/contentModel.xml
+.idea/.idea.Jumpy-Street-Project/.idea/indexLayout.xml
+.idea/.idea.Jumpy-Street-Project/.idea/modules.xml
+.idea/.idea.Jumpy-Street-Project/.idea/vcs.xml
+.idea/.idea.Jumpy-Street-Project/.idea/workspace.xml
