--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,5 @@ $RECYCLE.BIN/
 .idea/.idea.Jumpy-Street-Project/.idea/modules.xml
 .idea/.idea.Jumpy-Street-Project/.idea/vcs.xml
 .idea/.idea.Jumpy-Street-Project/.idea/workspace.xml
+Assets/Plugins.meta
+Assets/Plugins/Editor.meta
